# Mud-Bogged

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: question.yml
Bogged-Drop-Mud/: pack.mcmeta
Mud-Bogged/data/minecraft/loot_table/entities/: bogged.json
src/datapacks/: common.py  main.py
src/datapacks/packs/: __init__.py  bogged_drop_mud.py  husk_drop_sand.py  spirit_flight.py  stray_drop_ice.py
src/loot-table-datapacks/: common.py  main.py
src/loot_table_datapacks/: common.py  main.py
src/loot_table_datapacks/packs/: __init__.py  bogged_drop_mud.py  husk_drop_sand.py  stray_drop_ice.py
tests/: test_common.py  test_spirit_flight.py
