[project]
name = "datapacks"
version = "0.1.1"
description = "Generate Minecraft datapacks for a chosen version."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
datapacks = "datapacks.main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapacks"]